# CSharpWitx

./: .gitignore  README.md
Extras/: standalone.c  wasi.c
csharp/csharpwitx/CsharpWitx/: CsharpWitx.csproj  Program.cs  nuget.config
rust/hellowasi/: Cargo.toml  hellowasi.witx
rust/hellowasi/src/: lib.rs
