[package]
name = "hellowasi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
witx-bindgen-rust =  {git = "https://github.com/bytecodealliance/witx-bindgen.git" }
unicode-segmentation = "1.8.0"

[lib]
crate-type = ['cdylib']

[profile.dev]
debug = 2
